@startuml
    package gestioneRistorante{
        class Piatto{
            -nome : String
            -ingredienti : int
            -TempoPrep : long

        }
        class Ristorante{
            -numIngredienti : int
            - nome : String
            - menu : ArrayList<Piatto>
            +gestisciComanda(index : int) : Piatto
            +aggiornaMenu(p : Piatto) : void
        }
    }

    class Java.Lang.Exception

    package eccezioni{
        Exception BlackoutException
        Exception ingredientiMancantiException
        Exception RifornimentoException
    }

BlackoutException -up-|> Exception
RifornimentoException -up-|> Exception
ingredientiMancantiException -up-|> Exception

Piatto --o Ristorante
Ristorante ..> Exception
}
@enduml